<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/home_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRandomize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/home_randomize"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnRandomize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardPlayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:contentPadding="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPlayers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/open_sans_extrabold"
                        android:text="@string/home_players"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/ivPlayersElementIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tvPlayersElement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/open_sans_light"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardObjectives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:contentPadding="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvObjectives"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/open_sans_extrabold"
                        android:text="@string/home_objectives"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/ivElementIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tvElementName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/open_sans_light"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardResources"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:contentPadding="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvResources"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/open_sans_extrabold"
                        android:text="@string/home_resources"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/ivResourcesElementIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tvResourcesName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/open_sans_light"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardConflicts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:contentPadding="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvConflicts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/open_sans_extrabold"
                        android:text="@string/home_conflicts"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/ivConflictsElementIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tvConflictsName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/open_sans_light"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>